2010-07-07  Hayato Ito  <hayato@chromium.org>

Reviewed by Darin Adler.

        Rolling out 'page-break-inside:avoid' part of the r54929.
        Rebased the related layout tests, which are now expected to fail, as well.

        https://bugs.webkit.org/show_bug.cgi?id=41532

        * fast/multicol/break-properties-expected.txt:
        * printing/page-break-inside-avoid-expected.txt:
2010-07-07  Hayato Ito  <hayato@chromium.org>

        Reviewed by Darin Adler.

        Rolling out 'page-break-inside:avoid' part of the r54929.
        Rebased the related layout tests, which are now expected to fail, as well.

        https://bugs.webkit.org/show_bug.cgi?id=41532

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::paintChildren):

Canonical link: https://commits.webkit.org/53547@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62632 268f45cc-cd09-0410-ab3c-d52691b4dbfc